# lute

./: .gitignore  .gitmodules  .luaurc  .styluaignore  CMakeLists.txt  LICENSE  README.md  Sources.cmake  foreman.toml  lute.code-workspace  rokit.toml
.github/actions/setup-and-build/: action.yml
.github/workflows/: ci.yml  cmake-multi-platform.yml  docs.yml  release.yml
CMakeBuild/: FindOpenSSL.cmake  get_version.cmake  libsodium.cmake  uSockets.cmake  uWebSockets.cmake
batteries/: ansi.luau  base64.luau  cli.luau  cliargs.luau  colorful.luau  json.luau  pp.luau  toml.luau
batteries/syntax/: ast_types.luau  parser.luau  printer.luau  visitor.luau
cli/: clicommands.h  compile.h  main.cpp  options.cpp  queijo.cpp  require.cpp  spawn.cpp  spawn.h  tc.cpp  tc.h
cli/commands/helloworld/: init.luau
crypto/include/lute/: crypto.h
crypto/src/: crypto.cpp
definitions/: crypto.luau  fs.luau  luau.luau  net.luau  process.luau  system.luau  task.luau  time.luau  vm.luau
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.mts
docs/guide/: installation.md
docs/reference/: fs.md  luau.md  net.md  process.md  system.md  task.md  vm.md
docs/scripts/: reference.luau
examples/: a.luau  ansi.luau  async_read.luau  b.luau  badisnan.luau  cliargs.luau  colorful.luau  compile.luau  coroutine_error_isolation.luau  directories.luau  fib.luau  fs_example.lua  hash.luau  homedir_cwd.luau  json.luau  linter.luau  net_example.luau  parallel_serve.luau  parallel_serve_helper.luau  parallel_sort.luau  parallel_sort_helper.luau  parsing.luau  process.luau  process_env.luau  pwhash.luau  serve.luau  serve_html.luau  spawn_example.luau  system_lib.luau  task-resume.luau  task-wait.luau  task.luau  time_example.luau  time_instants.luau  toml.luau  writeFile.lua  writeFile.luau
fs/include/lute/: fs.h
fs/include/queijo/: fs.h
fs/src/: fs.cpp
luau/include/lute/: luau.h
luau/include/queijo/: luau.h
luau/src/: luau.cpp
lute/cli/: CMakeLists.txt  clicommands.cpp
lute/cli/commands/helloworld/: helloworld.luau
lute/cli/commands/setup/: init.luau
lute/cli/include/lute/: climain.h  tc.h
lute/cli/src/: clicommands.cpp  climain.cpp  compile.cpp  main.cpp  tc.cpp
lute/crypto/: CMakeLists.txt
lute/crypto/include/lute/: crypto.h
lute/crypto/src/: crypto.cpp
lute/fs/: CMakeLists.txt
lute/fs/include/lute/: fs.h
lute/fs/src/: fs.cpp
lute/luau/: CMakeLists.txt
lute/luau/src/: luau.cpp
lute/net/: CMakeLists.txt
lute/net/src/: net.cpp
lute/process/: CMakeLists.txt
lute/process/include/lute/: process.h
lute/process/src/: process.cpp
lute/require/: CMakeLists.txt
lute/require/include/lute/: modulepath.h  stdlibvfs.h
lute/require/src/: clivfs.cpp  filevfs.cpp  modulepath.cpp  require.cpp  stdlibvfs.cpp
lute/runtime/: CMakeLists.txt
lute/runtime/include/lute/: filevfs.h  options.h  requireutils.h  requirevfs.h  runtime.h  userdatas.h
lute/runtime/src/: clivfs.cpp  options.cpp  ref.cpp  requireutils.cpp  requirevfs.cpp  runtime.cpp
lute/std/: CMakeLists.txt
lute/std/libs/: task.luau
lute/std/libs/syntax/: visitor.luau
lute/std/src/: stdlib.cpp
lute/system/: CMakeLists.txt
lute/system/include/lute/: system.h
lute/system/src/: system.cpp
lute/task/: CMakeLists.txt
lute/task/include/lute/: task.h
lute/task/src/: task.cpp
lute/time/: CMakeLists.txt
lute/time/include/lute/: time.h
lute/time/src/: time.cpp
lute/vm/: CMakeLists.txt
lute/vm/include/lute/: vm.h
lute/vm/src/: spawn.cpp  vm.cpp
net/include/lute/: net.h
net/include/queijo/: net.h
net/src/: net.cpp
process/include/lute/: process.h
process/src/: process.cpp
runtime/include/lute/: clivfs.h  modulepath.h  require.h  requireutils.h  requirevfs.h  runtime.h  userdatas.h
runtime/include/queijo/: ref.h  runtime.h
runtime/src/: clivfs.cpp  filevfs.cpp  modulepath.cpp  options.cpp  ref.cpp  require.cpp  requireutils.cpp  requirevfs.cpp  runtime.cpp
std/: collections.luau  json.luau  pp.luau  table.luau  task.luau  time.luau  vector.luau
std/include/lute/: stdlib.h
std/src/: stdlib.cpp
system/include/lute/: system.h
system/src/: system.cpp
task/include/lute/: task.h
task/src/: task.cpp
tests/: CMakeLists.txt  testAstSerializer.spec.luau
tests/astSerializerTests/: assignment-1.luau  attributes-1.luau  break-continue-1.luau  compound-assignment-1.luau  compound-types-1.luau  compound-types-2.luau  compound-types-3.luau  function-declaration-1.luau  function-declaration-2.luau  function-declaration-3.luau  function-declaration-4.luau  function-type-1.luau  function-type-2.luau  function-type-3.luau  generic-for-loop-1.luau  if-expression-1.luau  if-expression-2.luau  if-statement-1.luau  interpolated-string-1.luau  interpolated-string-2.luau  local-assignment-1.luau  numeric-for-loop-1.luau  repeat-until-1.luau  table-1.luau  table-2.luau  type-alias-1.luau  type-alias-2.luau  type-assertion-1.luau  type-function-1.luau  type-singletons-1.luau  type-tables-1.luau  type-tables-2.luau  while-1.luau
tests/src/: luteprojectroot.cpp  luteprojectroot.h  modulepath.test.cpp  require.test.cpp
tests/src/modulepathroot/module/: init.luau
tests/src/require/: requirer.luau
tests/src/require/lute/: lute.luau  std.luau
tests/src/require/with_config/src/: dependency.luau  directory_alias_requirer.luau  other_dependency.luau
tests/src/require/with_config/src/subdirectory/: subdirectory_dependency.luau
tests/src/require/without_config/: ambiguous_directory_requirer.luau  ambiguous_file_requirer.luau  lua_dependency.lua  module.luau  nested_inits_requirer.luau  nested_module_requirer.luau
tests/src/require/without_config/nested/: submodule.luau
tests/src/require/without_config/nested_inits/init/: init.luau
time/include/lute/: time.h
time/src/: time.cpp
tools/: luthier.luau  luthier.py
vm/include/lute/: spawn.h
vm/include/queijo/: vm.h
vm/src/: spawn.cpp  vm.cpp
